--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -100,7 +100,7 @@ body {
     justify-content: center;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.8);
-    padding: 10px 0;
+    padding: 10px 0 10rem 0;
     position: static;
     height: auto;
     background-color: #aa9496;
