--- a/src/Components/Shop/CSS/Cart.css
+++ b/src/Components/Shop/CSS/Cart.css
@@ -17,6 +17,10 @@
   flex-direction: column;
   max-height: 90vh;
   overflow-y: auto;
+  background-image: url("../../../Images/Shop/camellogo.png");
+  background-position: center;
+  background-size: 60%;
+  background-repeat: no-repeat;
 }
 
 .cart-button-cont {
