--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -20,8 +20,9 @@ body {
   overflow-y: auto;
   align-items: end;
   background-image: url("../../Images/Home/clouds.jpg");
-  background-size: 101%;
+  background-size: 115%;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 .grid-overlay {
@@ -32,8 +33,8 @@ body {
   background-repeat: repeat;
   display: flex;
   justify-content: center;
-  animation: subtleMove 35s infinite;
-  animation-delay: 10s;
+  /* animation: subtleMove 35s infinite;
+  animation-delay: 10s; */
 }
 
 .home-content img {
@@ -77,7 +78,7 @@ body {
   background-repeat: no-repeat;
 }
 
-@keyframes subtleMove {
+/* @keyframes subtleMove {
   0%,
   100% {
     background-position: 0 0;
@@ -91,7 +92,7 @@ body {
   75% {
     background-position: -2px 2px;
   }
-}
+} */
 
 /* Mobile styles */
 @media screen and (max-width: 768px) {
@@ -102,6 +103,11 @@ body {
     background-size: 1.5%;
     height: auto;
     min-height: 100%;
+  }
+
+  .home-content {
+    background-size: 270%;
+    background-position: center;
   }
 
   .home-content img {
@@ -122,7 +128,7 @@ body {
     padding: 10px 0 10rem 0;
     position: static;
     height: auto;
-    background-color: #aa9496;
+    background-color: #dfdacf;
     background-image: url("../../Images/Home/squareImg.png");
     background-size: 2.2%;
     background-repeat: repeat;
@@ -155,6 +161,11 @@ body {
 @media screen and (max-width: 480px) {
   .grid-overlay {
     background-size: 2%;
+  }
+
+  .home-content {
+    background-size: 350%;
+    background-position: center;
   }
 
   .home-content img {
