removed body portfolio wide font. CSS styling added on PV

--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -26,6 +26,7 @@ body {
 
 /* Sci-fi starship background */
 .blog-overlay {
+  font-family: "Cutive Mono", monospace;
   min-height: 100vh;
   width: 100%;
   overflow-y: auto;
