--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -10,6 +10,7 @@ body {
 }
 
 .home-container {
+  font-family: "Cutive Mono", monospace;
   display: flex;
   flex-direction: column;
   height: 100%;
