--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -42,12 +42,13 @@ body {
   height: 100%;
   width: 100%;
   background-image: url("../../Images/Home/squareImg.png");
-  background-size: 17px 17px;
+  background-size: 16.5px 16.5px;
   background-repeat: repeat;
   display: flex;
   justify-content: center;
   position: relative;
   z-index: 1;
+  filter: grayscale(0.2);
 }
 
 .home-content img {
@@ -109,7 +110,7 @@ body {
     align-items: center;
     height: auto;
     min-height: 100%;
-    background-size: 17px 17px;
+    background-size: 16.5px 16.5px;
   }
 
   .home-content {
@@ -137,7 +138,7 @@ body {
     background-color: rgba(223, 218, 207, 0.8);
     background-image: linear-gradient(rgba(0, 0, 0, 0.1) 1px, transparent 1px),
       linear-gradient(90deg, rgba(0, 0, 0, 0.1) 1px, transparent 1px);
-    background-size: 17px 17px;
+    background-size: 16.5px 16.5px;
     border-top: black solid 2px;
   }
 
