--- a/src/Components/Games/Games.css
+++ b/src/Components/Games/Games.css
@@ -21,8 +21,8 @@ body,
 
 .window {
   width: auto;
-  min-width: 25%;
-  max-width: 450px;
+  min-width: 30%;
+  max-width: 50%;
   border: 2px solid #000;
   box-shadow: 4px 4px 0px #000;
   background-color: #c0c0c0;
