--- a/src/Components/Home/ProjectVideos/ProjectVideos.css
+++ b/src/Components/Home/ProjectVideos/ProjectVideos.css
@@ -24,7 +24,8 @@ body {
 .pv-container {
   font-family: "Kanit", sans-serif;
   width: 100%;
-  height: 100vh;
+
+  height: fit-content;
   overflow-y: auto;
   background-color: var(--pv-bg-color);
   color: var(--pv-text-color);
@@ -33,8 +34,8 @@ body {
 
 .pv-toggle {
   position: fixed;
-  top: 20px;
-  right: 20px;
+  top: 8%;
+  right: 8%;
   z-index: 1000;
   background-color: var(--pv-accent-color);
   color: var(--pv-bg-color);
@@ -101,6 +102,9 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
+  max-width: 99vw; /* Adjust this value as needed */
+  margin: 0 auto 2rem auto;
+  /* padding: 1rem; */
 }
 
 .pv-card:hover {
@@ -126,6 +130,23 @@ body {
   opacity: 0.7;
   font-size: 0.9rem;
   font-weight: 300;
+}
+
+.pv-video-container {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+  margin-bottom: 1rem;
+}
+
+.pv-video-container iframe,
+.pv-video-container video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .pv-video {
@@ -154,6 +175,11 @@ body {
   font-size: 0.9rem;
   margin-bottom: 0.5rem;
   font-weight: 300;
+}
+
+.pv-link {
+  color: var(--pv-text-color);
+  padding-right: 1rem;
 }
 
 .pv-tech {
@@ -192,8 +218,8 @@ body {
   }
 
   .pv-toggle {
-    top: 10px;
-    right: 10px;
+    top: 8%;
+    right: 8%;
     padding: 8px 12px;
     font-size: 0.9rem;
   }
@@ -213,8 +239,8 @@ body {
   }
 
   .pv-toggle {
-    top: 5px;
-    right: 5px;
+    top: 8%;
+    right: 8%;
     padding: 6px 10px;
     font-size: 0.8rem;
   }
