--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap");
-  font-family: "Cutive Mono", monospace; */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   margin: 0;
