--- a/src/Components/Shop/CSS/Footer.css
+++ b/src/Components/Shop/CSS/Footer.css
@@ -1,13 +1,11 @@
 .footer {
-  background-color: var(--primary-color);
+  background-color: var(--white-grey-background);
   color: var(--primary-color);
   padding: 1rem;
   text-align: right;
   margin-top: auto;
-  /* display: flex; */
+
   justify-content: space-evenly;
-  /* flex-direction: row;
-  width: 100vw; */
 }
 
 .about {
